# DiscoCatDjango

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
backend/: Dockerfile  Dockerfile.dev  entrypoint.dev.sh  entrypoint.sh  fix-cors.sh  requirements.txt
backend/evaluator/: asgi.py  consumers.py  settings.py  urls.py  wsgi.py
backend/evaluator/settings/: base.py  development.py  local.py  production.py
backend/evaluator/settings_off/: __init__.py  base.py  production.py
backend/static/js/: room_detail.js
backend/static_dev/js/: room_detail.js
backend/staticfiles/css/: room_detail.css
backend/staticfiles/js/: room_detail.js
backend/templates/voting/: base.html  login copy.html  login.html  nickname.html  room_detail.html  room_detail_bad.html  rooms copy 1.html  rooms.html
backend/users/: admin.py  authentication.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_initial.py  0003_customuser_user_id.py  0004_remove_customuser_user_id.py  0005_customuser_user_id.py
backend/voting/: admin.py  middleware.py  models.py  serializers.py  service.py  urls.py  views.py
backend/voting/migrations/: 0001_initial.py  0002_remove_roomparticipant_has_voted_and_more.py  0003_votingroom_participants.py  0004_alter_roomparticipant_comments.py  0005_alter_roomparticipant_comments.py  0006_votingroom_final_results.py  0007_nickname.py
